log
Thu Apr  7 10:07:00 HSP 2022: 
 tests:  0|6
total_score: 0/70
6eaf053
Thu Apr  7 10:07:21 HSP 2022: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f34465e
Thu Apr  7 10:32:31 HSP 2022: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d0a56f2
Thu Apr  7 10:34:07 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
53d39c4
Thu Apr  7 10:35:53 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
32865bf
Thu Apr  7 10:53:10 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
a251f5a
Thu Apr  7 10:54:10 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8ae7014
Thu Apr  7 11:05:05 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e9dbc88
Thu Apr  7 11:07:08 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
217d06c
Thu Apr  7 11:07:39 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
7a0f511
Thu Apr  7 11:08:39 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
69d2980
Thu Apr  7 11:10:17 HSP 2022: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
b4cb912
Thu Apr  7 11:12:15 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
08e47e1
Thu Apr  7 11:14:53 HSP 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
6d8392e
Thu Apr  7 11:19:56 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
91aeeb0
Thu Apr  7 11:22:35 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
dfe4a78
Thu Apr  7 11:24:24 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
284524f
Thu Apr  7 11:25:26 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
698415f
Thu Apr  7 11:44:57 HSP 2022: 
 hashmap.c | 28 +++++++++++++++++-----------
 1 file changed, 17 insertions(+), 11 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:15: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     long *i = hash(key,map->capacity);
               ^~~~
hashmap.c:61:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->current = i;
                  ^
hashmap.c: In function 'colision':
hashmap.c:105:24: error: array subscript is not an integer
     while (map->buckets[i] != NULL){
                        ^
hashmap.c:106:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         i = (*i + 1) % map->capacity;
           ^
hashmap.c:107:14: error: comparison between pointer and integer [-Werror]
         if(i == map->capacity - 1) i = 0;
              ^~
cc1.exe: all warnings being treated as errors
Compilation failed
bdededf
Thu Apr  7 11:45:26 HSP 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:15: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     long *i = hash(key,map->capacity);
               ^~~~
hashmap.c:61:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->current = i;
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
a281d01
Thu Apr  7 11:46:35 HSP 2022: 
 hashmap.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:56:22: error: passing argument 2 of 'colision' makes integer from pointer without a cast [-Werror=int-conversion]
         colision(map,&i,new);
                      ^
hashmap.c:19:6: note: expected 'long int' but argument is of type 'long int *'
 void colision(HashMap *, long, Pair *);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
abf48fd
Thu Apr  7 11:47:42 HSP 2022: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 20/70
d09c527
Thu Apr  7 11:49:48 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
6eb758d
Thu Apr  7 11:52:45 HSP 2022: 
 hashmap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  2|5
total_score: 20/70
32cc057
Thu Apr  7 12:06:13 HSP 2022: 
 hashmap.c | 26 +++++++++++++++-----------
 1 file changed, 15 insertions(+), 11 deletions(-)
 tests:  1|5
total_score: 10/70
dd079e2
Thu Apr  7 12:06:57 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3d49942
Thu Apr  7 12:08:32 HSP 2022: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
68693d1
Thu Apr  7 12:11:51 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
0f42f20
Thu Apr  7 12:16:57 HSP 2022: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
5550388
Thu Apr  7 16:11:29 HSP 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
7de4155
Thu Apr  7 16:12:17 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
699b1fa
Thu Apr  7 16:12:52 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c157dd4
Thu Apr  7 16:14:03 HSP 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3a0bd82
